Makes app display errors for login failure and logout success. Adds names to forms' fields. Redirects bootstrap css to look for images in the correct directory. Makes all unordered lists have no bullets. Makes context variable not a global. Makes swig autoescape output to be html safe. Adds comments to make routes file more readable.

--- a/static/css/extra.css
+++ b/static/css/extra.css
@@ -23,6 +23,10 @@ p#footer_p {
     padding-top:4px;
 }
 
+ul {
+    list-style-type: none;
+}
+
 /* Sticky footer */
 /* http://twitter.github.io/bootstrap/examples/sticky-footer-navbar.html */
 /* The html and body elements cannot have any padding or margin. */
